--- a/angular.json
+++ b/angular.json
@@ -34,13 +34,11 @@
                 "styles": [
                     "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
                     "node_modules/ng-zorro-antd/resizable/style/index.min.css",
-                    "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",  
-                    "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
+                    "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+                    "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",  
                     "src/styles.less"
                 ],
                 "scripts": [
-                    "./node_modules/jquery/dist/jquery.min.js",  
-                    "./node_modules/owl.carousel/dist/owl.carousel.min.js"
                 ]
           },
           "configurations": {
