--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
     "ng-zorro-antd": "^11.1.0",
+    "ng2-nouislider": "^1.8.2",
     "ngx-owl-carousel-o": "^5.0.0",
+    "nouislider-angular": "^2.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
